[package]
name = "web-arena-indigo"
version = "0.1.0"
edition = "2021"
authors = ["uiuifree"]
description = "web arena indigo API"
license = "MIT"
keywords=["WebArena", "web_arena"]

[dependencies]
reqwest ={version="0.11.10",features=["json"]}
# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
dotenv = "0.15.0"